--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://vasabi07.github.io/youtube-react",
+  "homepage": "https://vasabi07.github.io/youtube-react",
   
   "name": "youtube-react",
   
